chore: add version header

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,10 @@ set(PROJECT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src)
 
 include(${CMAKE_SOURCE_DIR}/cmake/get_version.cmake)
 
-get_version_info(VERSION_MAJOR, VERSION_MINOR, VERSION_BUILD, VERSION_COMMIT)
+get_version_info(VERSION_MAJOR VERSION_MINOR VERSION_BUILD VERSION_COMMIT)
 set(VERSION_STRING "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_BUILD}.${VERSION_COMMIT}")
 message("Version: ${VERSION_STRING}")
+
+configure_file(${CMAKE_SOURCE_DIR}/version.h.in ${PROJECT_SOURCE_DIR}/version.h)
+
 add_subdirectory(${PROJECT_SOURCE_DIR})
