feat: add logger

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -17,4 +17,7 @@ add_executable(
     ${SRC}
 )
 
-set_property(TARGET ${PROJECT_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/$(Configuration)/bin")
+set_target_properties(${PROJECT_NAME} PROPERTIES
+    LINK_FLAGS "/SUBSYSTEM:CONSOLE /ENTRY:mainCRTStartup"
+    VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/$(Configuration)/bin"
+)
