--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -19,5 +19,5 @@ add_executable(
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
     LINK_FLAGS "/SUBSYSTEM:CONSOLE /ENTRY:mainCRTStartup"
-    VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/$(Configuration)/bin"
+    VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/$(Configuration)/"
 )
